<resources>
    <string name="app_name">Fiix_Custom_Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_barcode">Scan</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>

    <!-- Strings for object detection settings. -->
    <string name="pref_category_object_detection">Object detection</string>
    <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>

    <!-- Strings for product search settings. -->
    <string name="pref_category_product_search">Product search</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_title_enable_auto_search">Enable auto search</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
    <string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
    <string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>

    <!-- Strings for barcode detection settings. -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>

    <string name="product_search_button">Search object</string>

    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="cd_photo_library_button">Upload image</string>


    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="part_item">Part Image</string>
    <string name="part_search">Part Search</string>
    <string name="hint_part_type">SENS</string>
    <string name="hint_make">eg) Siemens</string>
    <string name="search">Search</string>
    <string name="part_add_manufacturer">Manufacturer</string>
    <string name="part_add_model">Model</string>
    <string name="part_add_part_number">Part Number</string>
    <string name="submit">Submit</string>
    <string name="add_new_part">Add New Part</string>
    <string name="title_parts">Parts</string>
    <string name="title_work_orders">Work Orders</string>
    <string name="title_part_search">PartSearchFragment</string>
    <string name="barcode">Barcode</string>
    <string name="title_itm_maintenance">ITM Maintenance</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>

    <!-- work order status messages -->
    <string name="work_orders_added">"Work orders added to database</string>
    <string name="work_order_add_error">"Error adding work order to database</string>
    <string name="hello">hello</string>
    <string name="problem_hint_text">   Problem Code</string>
    <string name="task_complete">DONE</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="actual_time">Actual Time</string>
    <string name="hrs">HRS</string>
    <string name="detail">DETAIL</string>
    <string name="tasks">TASKS</string>
    <string name="title_work_order">WORK ORDER</string>
    <string name="cause_hint_text">   Cause Code</string>
    <string name="action_hint_text">   Action Code</string>
    <string name="work_order_description">Work Order Description</string>
    <string name="asset">Asset</string>
    <string name="status">Status</string>
    <string name="maintenance_type">Maintenance Type</string>
    <string name="requestedBy">Requested By</string>
    <string name="scheduled_date">Scheduled completion date</string>
    <string name="update_fiix">UPDATE FIIX</string>
    <string name="problem_source_hint_text">   Problem Source</string>
    <string name="notes">NOTES</string>
    <string name="detail_notes">Notes</string>
    <string name="work_order_task_added">Work order tasks added</string>
    <string name="RCA">RCA</string>
    <string name="request_description">Request</string>
    <string name="problem_description">Problem</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="problem_category_hint_text">   Category</string>
    <string name="notes_hint_text">Note</string>
    <string name="task_add_description">Description</string>
    <string name="save">SAVE</string>
    <string name="work_order_task_add_error">Error adding work order task</string>
    <string name="add_hour">Add hour</string>
    <string name="sub_hour">Subtract hour</string>
    <string name="add_minute">Increase minutes</string>
    <string name="sub_minute">Decrease minutes</string>
    <string name="task_delete">Task delete</string>
    <string name="channel_name">notification channel</string>
    <string name="channel_description">Notification channel for Fiix updates</string>
    <string name="delete_task_dialog_message">Are you sure?</string>
    <string name="delete_task_dialog_title">Delete User Task</string>
    <string name="task_deleted">Task deleted from database</string>
    <string name="task_added">Task added to database</string>
    <string name="colon">:</string>
</resources>
