<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:style="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_part"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/label_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barcode"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/part_add_manufacturer"
        style="@style/TextInputLayout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_partadd_make"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/part_add_model"
        style="@style/TextInputLayout" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:id="@+id/fragment_partadd_model" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/part_add_part_number"
        style="@style/TextInputLayout" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_partadd_pn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/fragment_partadd_submit" />

</LinearLayout>