<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ITM.maint.fiix_custom_mobile.ui.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/homeToNotification"
            app:destination="@id/navigation_notifications" />
        <action
            android:id="@+id/homeToBarcode"
            app:destination="@id/navigation_barcode" />
    </fragment>

    <fragment
        android:id="@+id/navigation_barcode"
        android:name="ITM.maint.fiix_custom_mobile.ui.view.BarcodeFragment"
        android:label="@string/title_barcode"
        tools:layout="@layout/fragment_barcode" >
        <action
            android:id="@+id/barcodeToPartAdd"
            app:destination="@id/navigation_partAdd"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ITM.maint.fiix_custom_mobile.ui.view.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_partAdd"
        android:name="ITM.maint.fiix_custom_mobile.ui.view.PartAddFragment"
        android:label="PartAddFragment"
        tools:layout="@layout/fragment_part_add">
        <argument
            android:name="barcode"
            app:argType="string"
            android:defaultValue="NONE" />
    </fragment>
</navigation>
