<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_layout"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        android:hint="@string/notes_hint_text"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        app:hintTextAppearance="@style/DropdownHintText"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detail_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="top|start"
            android:imeOptions="actionNext" />

    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@+id/update_button_layout"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_layout"
        app:layout_constraintVertical_chainStyle="packed">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/update_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rca_update_button"
            style="@style/PrimaryActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="@string/update"
            android:textColor="@color/black"
            app:icon="@drawable/ic_check_circle_24px"
            app:iconGravity="start"
            app:iconTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rca_cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rca_cancel_button"
            style="@style/PrimaryActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            app:icon="@drawable/ic_cancel_24px"
            app:iconGravity="start"
            app:iconTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rca_update_button"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>